0.9.0 (currently working on)
- [#3301] Change: Model_Place::setCountry should also accept null
- [#3304] Fix: Crash on registration if a place has an invalid country
- [#3290] Fix: Changes to the "myself" checkbox are registered only when the checkbox loses the focus in IE
- [#3233] Feature: Add a modal editor for target groups
- [#3232] Feature: Add a modal editor for registration checkboxes
- [#3230] Feature: Add a modal editor for speakers
- [#3274] Fix: Front end editor crashes
- [#3244] Change: Remove the check in the BE module concerning whether there are any records on the page
- [#3268] Fix: The From: for the publishing e-mails is empty
- [#2646] Fix: Config check does not complain if loginPID is empty on list view page
- [#3267] Fix: List of flexforms checkboxes "Fields to display in the FE editor" is doubled
- [#3263] Feature: Add a fallback TS-setup value for the auxiliary records created in the FE
- [#3262] Feature: Add a setting to the FE-usergroups where events created in the FE-editor will be saved.
- [#3260] Fix: When sending the publication mail for an event without date, 01.01.1970 is shown as date.
- [#3010] Fix: The event type drop-down has two empty options
- [#3094] Feature: Add a modal editor form for entering new place records
- [#3234] Change: Remove support for FE editing some aux records
- [#3257] Fix: The relation place -> country should use not use the UID, but the alpha2 code
- [#3157] Feature: Dynamically hide/show separate fields for first and last names for the additional attendees
- [#3184] Feature: When an event is hidden after FE-editing, send an e-mail to a BE user with a publication link
- [#3247] Fix: The visibility status of an edited event is not set in the fe-editor
- [#3223] Fix: Label for terms_2 is missing in the registration form
- [#3213] Fix: Crash when saving an event in the FE editor
- [#3214] Fix: CSS validation error in the FE editor CSS
- [#3235] Fix: Hidden records cannot be edited in the FE-editor